# ci-base

./: .copier-answers.autopretty.yml  .copier-answers.image-template.yml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
tests/: conftest.py  test_tools.py
