[project]
name = "ci-base"
version = "0.0.0"
description = "Base image for CI/CD workloads"
authors = [{ name = "Jairo Llopis", email = "jairo.llopis@tecnativa.com" }]
requires-python = ">=3.9,<3.13"
license = "BOOST-1.0"
dependencies = [

]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pre-commit-uv>=4.1.5",
    "pytest>=6.2.1",
    # We don't use pytest xdist because tests are so small it causes
    # more trouble than it solves.
    # "pytest-xdist>=2.2.0",
    "python-on-whales>=0.81.0",
]

[tool.uv]
package = false
default-groups = "all"
[tool.pytest.ini_options]
addopts = "-ra"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
